Change core security config2